test-data/invalid/param-too-many-children.jsx
const Test = () => (
    <Translate>
        <Param name="foo">
            a
            <span />
        </Param>
    </Translate>
);
